# cobolens

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  justfile  rust-toolchain.toml  rustfmt.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  span.rs
crates/core/src/lexer/: fixed_format.rs  free_format.rs  mod.rs  scanner.rs  token.rs
crates/core/tests/: lexer_fixed_format.rs  lexer_free_format.rs  lexer_prop.rs
crates/core/tests/snapshots/: lexer_fixed_format__comment_lines.snap  lexer_fixed_format__continuation_across_comment_line_is_orphan.snap  lexer_fixed_format__continuation_chain_three_lines.snap  lexer_fixed_format__continuation_keyword.snap  lexer_fixed_format__continuation_literal_double_quote.snap  lexer_fixed_format__continuation_literal_same_quote.snap  lexer_fixed_format__continuation_missing_reopen.snap  lexer_fixed_format__error_recovery.snap  lexer_fixed_format__minimal_record.snap  lexer_fixed_format__nested_group.snap  lexer_fixed_format__numeric_and_string_literals.snap  lexer_fixed_format__orphan_continuation_first_line.snap  lexer_fixed_format__pic_variants.snap  lexer_fixed_format__sequence_area_ignored.snap  lexer_fixed_format__unterminated_literal_no_continuation.snap  lexer_free_format__inline_comment.snap  lexer_free_format__inline_comment_inside_literal.snap  lexer_free_format__minimal_record_free.snap  lexer_free_format__star_at_col_1_is_not_special.snap
fixtures/simple/: continuation-chain.cpy  continuation-keyword.cpy  continuation-literal.cpy  customer.cpy  free-format-basic.cpy  free-format-inline-comment.cpy  nested-group.cpy  pic-variants.cpy  with-comments.cpy
