[workspace]
resolver = "2"
members = []

[workspace.package]
version      = "0.0.0"
edition      = "2021"
rust-version = "1.80"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/YOURNAME/copyforge"
authors      = ["copyforge contributors"]

# Single source of truth for dependency versions. Workspace members opt in
# per crate via `workspace = true`. Declared here, not consumed yet.
[workspace.dependencies]
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
toml         = "0.8"
miette       = { version = "7", features = ["fancy"] }
thiserror    = "1"
logos        = "0.14"
clap         = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
console      = "0.15"
indicatif    = "0.17"
rust_decimal = { version = "1", features = ["serde-with-str"] }
byteorder    = "1"
encoding_rs  = "0.8"
insta        = { version = "1", features = ["yaml", "glob"] }
proptest     = "1"
rstest       = "0.21"
