[package]
name        = "cli"
description = "Command-line interface for copyforge."

version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[[bin]]
name = "copyforge"
path = "src/main.rs"
