[package]
name        = "copyforge-core"
description = "Copybook parser and intermediate representation for copyforge."

version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[dependencies]
logos     = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
